fixed spacing on greet and meet pages

--- a/css/greet_style.css
+++ b/css/greet_style.css
@@ -21,7 +21,7 @@ textarea, input {
 }
 
 .message-textarea {
-    margin: 40px 20px 0px 150px;
+    margin: 40px 20px 0px 50px;
     width: 65%;
     height: 480px;
 }
